Enhance connection management, context menus, and terminal UI
- Add multi-select delete with recursive folder content preview
- Add duplicate connection (copy without password)
- Add test connection button in connection dialog
- Fix connection timeout not applying to actual connections
- Add project.svg icon and settings button in action bar
- Redesign ProjectManagerDialog with click-to-select + unified switch
- Add right-click menu on empty connection list area
- Fix terminal right-click menu i18n keys and add hover highlight
- Add rounded corners to Swing JPopupMenu and JavaFX ContextMenu
- Custom separator panel for terminal popup menu